# cctmux

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CC2CC_TEAM.md  CLAUDE.md  CLI_REFERENCE.md  CONFIGURATION.md  LAYOUTS.md  QUICKSTART.md  README.md  SKILL_GUIDE.md
docs/superpowers/plans/: 2026-04-15-pitmux-command.md
docs/superpowers/specs/: 2026-04-15-pitmux-command-design.md
examples/: team.yaml
skill/cc-tmux/: SKILL.md
skill/cc-tmux/references/: monitors.md  team.md
src/cctmux/: __init__.py  __main__.py  activity_monitor.py  config.py  git_monitor.py  layouts.py  ralph_monitor.py  ralph_runner.py  session_history.py  session_monitor.py  subagent_monitor.py  task_monitor.py  tmux_manager.py  utils.py  xdg_paths.py
src/cctmux/skill-pi/pi-tmux/: SKILL.md
src/cctmux/skill/cc-team-lead/: SKILL.md
src/cctmux/skill/cc-tmux/: SKILL.md
src/cctmux/skill/cc-tmux/references/: par-mode.md  ralph.md  saved-layouts.md  team.md
tests/: __init__.py  test_config.py  test_git_monitor.py  test_layouts.py  test_pitmux.py  test_ralph_monitor.py  test_ralph_runner.py  test_session_history.py  test_session_monitor.py  test_task_monitor.py  test_tmux_manager.py  test_utils.py
